<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RuleActivity"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule_title"
        android:textStyle="bold"
        android:textColor="@color/primary_700"
        android:textSize="32sp"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport_title"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <TextView
        android:justificationMode="inter_word"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport_0"
        android:textSize="18sp"
        android:lineHeight="24sp"/>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_adjust"/>
        <TextView
            android:lineHeight="24sp"
            android:justificationMode="inter_word"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transport_1"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_adjust"/>
        <TextView
            android:lineHeight="24sp"
            android:justificationMode="inter_word"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transport_2"
            android:textSize="18sp"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_title"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_adjust"/>
        <TextView
            android:lineHeight="24sp"
            android:justificationMode="inter_word"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_1"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_adjust"/>
        <TextView
            android:lineHeight="24sp"
            android:justificationMode="inter_word"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_2"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_add"/>
        <TextView
            android:lineHeight="24sp"
            android:justificationMode="inter_word"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_3"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_add"/>
        <TextView
            android:lineHeight="24sp"
            android:justificationMode="inter_word"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_4"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_add"/>
        <TextView
            android:lineHeight="24sp"
            android:justificationMode="inter_word"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_5"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_add"/>
        <TextView
            android:lineHeight="24sp"
            android:justificationMode="inter_word"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_6"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>