<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".VerifyOTPActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_phone"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <EditText
        android:textAlignment="textEnd"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="36dp"
        android:id="@+id/tv_phone"
        android:textColor="@color/black"/>

    <Button
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_opt"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:id="@+id/btn_send"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/purple_800"
        android:text="@string/verify_none"/>

    <LinearLayout
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:textAlignment="center"
            android:id="@+id/et_1"
            android:inputType="number"
            android:layout_gravity="center"
            android:maxLength="1"
            android:textSize="24sp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:textAlignment="center"
            android:id="@+id/et_2"
            android:inputType="number"
            android:layout_gravity="center"
            android:maxLength="1"
            android:textSize="24sp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:textAlignment="center"
            android:id="@+id/et_3"
            android:inputType="number"
            android:layout_gravity="center"
            android:maxLength="1"
            android:textSize="24sp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:textAlignment="center"
            android:id="@+id/et_4"
            android:inputType="number"
            android:layout_gravity="center"
            android:maxLength="1"
            android:textSize="24sp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:textAlignment="center"
            android:id="@+id/et_5"
            android:inputType="number"
            android:layout_gravity="center"
            android:maxLength="1"
            android:textSize="24sp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:textAlignment="center"
            android:id="@+id/et_6"
            android:inputType="number"
            android:layout_gravity="center"
            android:maxLength="1"
            android:textSize="24sp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:id="@+id/tv_count"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_confirm"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:id="@+id/btn_confirm"/>

</LinearLayout>